inicio de pagina

--- a/app/src/main/res/layout/activity_pagina_principal.xml
+++ b/app/src/main/res/layout/activity_pagina_principal.xml
@@ -45,7 +45,7 @@
         android:textStyle="bold|italic" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editTextHeroe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -54,7 +54,7 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnBuscar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BUSCAR HEROES" />
