--- a/app/src/main/res/layout/activity_pagina_principal.xml
+++ b/app/src/main/res/layout/activity_pagina_principal.xml
@@ -15,7 +15,7 @@
         app:srcCompat="@drawable/ask_hero_logo" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/caracteristicas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
